# routes/api/auth_router.js
@@ -1,5 +1,5 @@
 import express from "express";
-import authController from "../../controllers/auth-controllers.js"
+import authController from "../../controllers/auth_controllers.js"
 import {validateBody} from "../../decorators/index.js";
 import {authenticate, isEmptyBody} from "../../middlewares/index.js";
 import { authLoginSchema, authRegisterForm, userEmailSchema} from "../../db/models/User.js";
@@ -7,9 +7,9 @@ import { authLoginSchema, authRegisterForm, userEmailSchema} from "../../db/mode
 
 const authRouter = express.Router();
 
-authRouter.post("/register", isEmptyBody, validateBody(authRegisterForm), authController.register);
+authRouter.post("/singup", isEmptyBody, validateBody(authRegisterForm), authController.register);
 
-authRouter.post("/login", isEmptyBody, validateBody(authLoginSchema), authController.login);
+authRouter.post("/singin", isEmptyBody, validateBody(authLoginSchema), authController.login);
 
 authRouter.post("/logout", authenticate, authController.logout);
 
