# swagger.json
@@ -11,24 +11,30 @@
   },
   "consumes": ["application/json", "multipart/form-data"],
   "produces": ["application/json"],
-  "servers": [{ "url": "https://water-tracker-back-end.onrender.com/" }],
+  "servers": [{ "url": "https://localhost:8000/" }],
   "tags": [
     {
-      "name": "UserAuth",
+      "name": "Users Auth",
       "description": "Registration and authentication endpoints"
     },
     {
       "name": "Users",
       "description": "User's endpoints"
     },
-    { "name": "WaterToday", "description": "WaterToday-related endpoints" },
-    { "name": "WaterMonth", "description": "WaterMonth-related endpoints" }
+    {
+      "name": "Consumed Water Today",
+      "description": "WaterToday-related endpoints"
+    },
+    {
+      "name": "Consumed Water Month",
+      "description": "WaterMonth-related endpoints"
+    }
   ],
   "paths": {
-    "/auth/register": {
+    "/auth/singup": {
       "post": {
-        "tags": ["UserAuth"],
-        "summary": "UserAuth registration",
+        "tags": ["Users Auth"],
+        "summary": "User Auth registration",
         "parameters": [],
         "requestBody": {
           "description": "Registration's object",
@@ -63,10 +69,10 @@
         }
       }
     },
-    "/auth/login": {
+    "/auth/singin": {
       "post": {
-        "tags": ["UserAuth"],
-        "summary": "UserAuth login",
+        "tags": ["Users Auth"],
+        "summary": "User Auth login",
         "parameters": [],
         "requestBody": {
           "description": "Login credentials",
@@ -99,8 +105,8 @@
     },
     "/auth/logout": {
       "post": {
-        "tags": ["UserAuth"],
-        "summary": "UserAuth logout",
+        "tags": ["Users Auth"],
+        "summary": "User Auth logout",
         "security": [{ "Bearer": [] }],
         "responses": {
           "200": {
@@ -240,7 +246,7 @@
         }
       }
     },
-    "/users/changePassword": {
+    "/users/change-password": {
       "patch": {
         "tags": ["Users"],
         "summary": "Change user's password",
@@ -294,8 +300,8 @@
         }
       }
     },
-    "/users/forgotPassword": {
-      "patch": {
+    "/users/forgot-password": {
+      "post": {
         "tags": ["Users"],
         "summary": "Send forgot password email",
         "parameters": [
@@ -337,7 +343,7 @@
         }
       }
     },
-    "/users/resetPassword/{forgotPasswordToken}": {
+    "/users/reset-password/{forgotPasswordToken}": {
       "patch": {
         "tags": ["Users"],
         "summary": "Change user's password",
@@ -384,7 +390,7 @@
         }
       }
     },
-    "/users/waterRate": {
+    "/users/water-rate": {
       "patch": {
         "tags": ["Users"],
         "summary": "Update user's daily water norm goal",
@@ -437,9 +443,9 @@
         }
       }
     },
-    "/consumedWater/today": {
+    "/consumed-water/today": {
       "post": {
-        "tags": ["ConsumedWaterToday"],
+        "tags": ["Consumed Water Today"],
         "summary": "Save water consumption information",
         "security": [{ "Bearer": [] }],
         "requestBody": {
@@ -471,9 +477,9 @@
         }
       }
     },
-    "/consumedWater/today/{date}/{month}": {
+    "/consumed-water/today/{date}/{month}": {
       "get": {
-        "tags": ["ConsumedWaterToday"],
+        "tags": ["Consumed Water Today"],
         "summary": "Get water consumption information for today",
         "parameters": [
           {
@@ -529,9 +535,9 @@
         }
       }
     },
-    "/consumedWater/today/{consumedWaterId}": {
-      "patch": {
-        "tags": ["ConsumedWaterToday"],
+    "/consumed-water/today/{consumedWaterId}": {
+      "put": {
+        "tags": ["Consumed Water Today"],
         "summary": "Edit water consumption record",
         "security": [{ "Bearer": [] }],
         "parameters": [
@@ -578,7 +584,7 @@
         }
       },
       "delete": {
-        "tags": ["ConsumedWaterToday"],
+        "tags": ["Consumed Water Today"],
         "summary": "Delete water consumption record",
         "security": [{ "Bearer": [] }],
         "parameters": [
@@ -604,9 +610,9 @@
         }
       }
     },
-    "/consumedWater/month/{month}": {
+    "/consumed-water/month/{month}": {
       "get": {
-        "tags": ["ConsumedWaterMonth"],
+        "tags": ["Consumed Water Month"],
         "summary": "Get water consumption information for each day in the selected month",
         "security": [{ "Bearer": [] }],
         "parameters": [
@@ -849,7 +855,7 @@
           "waterVolume": {
             "type": "number",
             "description": "Amount of water consumed in milliliters",
-            "minimum": 0,
+            "minimum": 1,
             "maximum": 5000
           },
           "time": {
@@ -897,7 +903,7 @@
           "waterVolume": {
             "type": "number",
             "description": "Updated amount of water consumed in milliliters",
-            "minimum": 0,
+            "minimum": 1,
             "maximum": 5000
           },
           "time": {
@@ -912,37 +918,12 @@
           "waterVolume": {
             "type": "number",
             "description": "Amount of water consumed in milliliters",
-            "minimum": 0,
+            "minimum": 1,
             "maximum": 5000
           },
           "time": {
             "type": "string",
             "description": "Time when water was consumed"
-          },
-          "date": {
-            "type": "integer",
-            "minimum": 1,
-            "maximum": 31
-          },
-          "month": {
-            "type": "string",
-            "enum": [
-              "January",
-              "February",
-              "March",
-              "April",
-              "May",
-              "June",
-              "July",
-              "August",
-              "September",
-              "October",
-              "November",
-              "December"
-            ]
-          },
-          "percent": {
-            "type": "number"
           }
         }
       },
